--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  material_symbols_icons: ^4.2892.0
+  get: ^4.7.3
+  google_nav_bar: ^5.0.7
 
 dev_dependencies:
   flutter_test:
