--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -18,8 +18,10 @@ pluginManagement {
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "8.1.0" apply false
-    id "org.jetbrains.kotlin.android" version "1.8.22" apply false
+    // Naikkan ke 8.6.0 sesuai saran error
+    id "com.android.application" version "8.11.0" apply false 
+    // Naikkan ke 2.1.0 sesuai saran error
+    id "org.jetbrains.kotlin.android" version "2.2.20" apply false
 }
 
 include ":app"
