--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   material_symbols_icons: ^4.2892.0
   get: ^4.7.3
-  google_nav_bar: ^5.0.7
   http: ^1.6.0
   image_picker: ^1.2.1
   geolocator: ^14.0.2
   geocoding: ^4.0.0
   intl: ^0.20.2
+  liquid_glass_navbar: ^1.0.4
 
 dev_dependencies:
   flutter_test:
