--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   geocoding: ^4.0.0
   intl: ^0.20.2
   liquid_glass_navbar: ^1.0.4
+  google_fonts: ^8.0.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
